--- a/client/src/assets/Nav.css
+++ b/client/src/assets/Nav.css
@@ -6,16 +6,11 @@ nav {
     z-index: 1;
     top: 0;
     left: 0;
+    font-size: 300px;
 }
 
 .nav {
-    display: flex;
-    padding: 20px 0;
-    margin-left: -2px;
-    margin-right: -2px;
-    margin-top: -2px;
-    box-shadow: 1px 1px 1px .3px #CECECE;
-    width: 100%;
+font-size: 300px;
 }
 
 @media (max-width: 500px) {
