--- a/client/src/assets/Footer.css
+++ b/client/src/assets/Footer.css
@@ -1,12 +1,11 @@
 footer {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex: 1;
-  padding: 20px;
-}
 
-footer a {
-  text-decoration: underline;
+}
+.fa {
+  display: flex;
 }
 
