--- a/client/src/assets/CarouselTwo.css
+++ b/client/src/assets/CarouselTwo.css
@@ -1,5 +1,7 @@
 .carousel-wrapper {
-  width: 300px;
-  height: 300px;
+  display: flex;
+  justify-content: center;
+  width:1200px;
+  height:850px;
 }
 
