--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,5 @@
 .App {
-  text-align: center;
-}
-
-.about-us {
-  width: 500px;
-  text-align: center;
+display: flex;
+justify-content: center;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
