--- a/client/src/assets/Wines.css
+++ b/client/src/assets/Wines.css
@@ -6,6 +6,13 @@
   padding: 40px;
 }
 
+.our-wine-list-header{
+  font-size: xx-large;
+  font-family: 'Covered By Your Grace', cursive;
+  display: flex;
+  justify-content: center;
+}
+
 @media (max-width: 500px) {
   .wines {
       width: 100%;
