--- a/client/src/assets/Layout.css
+++ b/client/src/assets/Layout.css
@@ -18,6 +18,8 @@ background-image: linear-gradient(180deg, #772323, #5e0e0e );
 color: whitesmoke;
 font-weight:600;
 justify-content: center;
+padding-top: 10px;
+padding-bottom:10px;
 
 }
 
