--- a/client/src/assets/Step1.css
+++ b/client/src/assets/Step1.css
@@ -1,25 +1,25 @@
-.form-group-1{
+.form-group-1 {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
-  margin-top:20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  width: 500px;
 }
 
 .create-name {
-  margin-bottom: 20px;
-background-color: whitesmoke;
+  margin-bottom: 40px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
-.create-breed {
-  margin-bottom: 20px;
-  background-color: whitesmoke;
+.create-clarity {
+  margin-bottom: 40px;
 }
 
-.create-age {
-  margin-bottom: 20px;
-  background-color: whitesmoke;
+.create-intensity-aromatics {
+  margin-bottom: 40px;
 }
 
-.select-create-gender {
-  width: 500px;
+.select-create-color {
+  margin-bottom: 40px;
 }
