--- a/client/src/assets/Register.css
+++ b/client/src/assets/Register.css
@@ -1,5 +1,119 @@
-.registration-form{
-display: flex;
-flex-direction: column;
+.form-container-register {
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
+.register-head-section {
+  text-align: center;
+}
+
+.register-header {
+
+  margin-top: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 30px;
+}
+
+.register-subhead{
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+
+.individual-register-input {
+  width: 500px;
+  height: 35px;
+  padding: 10px;
+  border-radius: 3.5px;
+  border-color: #18101069;
+}
+
+.register-input-container {
+  margin-bottom: 30px;
+}
+
+.register-fields {
+  display: block;
+  text-align: center;
+  padding-top: 55px;
+  padding-bottom: 30px;
+  background-color: white;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  box-shadow: 5px 10px 5px;
+}
+
+.register-btn {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+  padding: 7px;
+  background-color: #233d4d;
+  color: #ffffff;
+  width: 200px;
+}
+
+.register-btn:hover {
+  transform: scale(1.1);
+}
+
+#error-message {
+  color: #ff0000;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+@media only screen and (max-width: 786px) {
+  .register-header {
+    font-size: 35px;
+  }
+
+  .individual-register-input {
+    width: 400px;
+  }
+
+  .register-fields {
+    width: 500px;
+  }
+
+  .register-btn {
+    width: 100px;
+  }
+
+  #error-message {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 546px) {
+  .register-header {
+    font-size: 28px;
+  }
+
+  .individual-register-input {
+    width: 250px;
+  }
+
+  .register-fields {
+    width: 350px;
+  }
+
+  .register-btn {
+    width: 100px;
+  }
+
+  #error-message {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 380px){
+  .register-header {
+    padding-left: 55px;
+    padding-right: 55px;
+  }
+}
