--- a/client/src/assets/AboutUs.css
+++ b/client/src/assets/AboutUs.css
@@ -1,20 +1,34 @@
-.about-us{
+.about-us {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   font-size: 50px;
-  font-family: 'Covered By Your Grace', cursive;
-}
-
-.about-us-text{
-  display:flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
   margin-left: 400px;
   margin-right: 400px;
-  font-size: x-large;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  
+}
+
+.about-us-text {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
+.about-us-wset {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 40px;
+}
+
+.background-video-two {
+  display: flex;
+  justify-content: center;
+  width: 600px;
+  height: 600px;
+}
+.about-us-header {
+  display: flex;
+  justify-content: center;
+  font-family: "Covered By Your Grace", cursive;
+  font-size: 75px;
 }
