--- a/client/src/assets/BackgroundVideoTwo.css
+++ b/client/src/assets/BackgroundVideoTwo.css
@@ -1,12 +1,3 @@
 .background-video-two {
-  opacity: .8;
-  max-width: 100%;
-  box-shadow: 5px 10px #888888;
-
-}
-
-.video-header {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 40px;
+  opacity: 0.8;
 }
