--- a/client/src/assets/Footer.css
+++ b/client/src/assets/Footer.css
@@ -1,12 +1,10 @@
-footer{
-display: flex;
-position: fixed;
-justify-content: center;
-bottom: 0;
-width: 100%;
-background-image:linear-gradient(180deg, #5e0e0e, #772323); 
-min-height: 1vh;
-color: whitesmoke;
-font-weight:600;
-
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-image: linear-gradient(180deg, #5e0e0e, #772323);
+  color: whitesmoke;
+  font-weight: 600;
+  margin-top: 60px;
+  bottom: 0;
 }
