--- a/client/src/assets/Modal.css
+++ b/client/src/assets/Modal.css
@@ -1,6 +1,6 @@
 .modal-container {
- height: 100%;
-  width: 100%;
+ height: 100px;
+  width: 100px;
   background-color: rgba(0,0,0,.6);
   z-index: 2;
   display: flex;
