--- a/client/src/assets/Wine.css
+++ b/client/src/assets/Wine.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin: 10px;
-  box-shadow: 0px 0px 3px 1px #CECECE;
+  box-shadow: 0px 0px 3px 1px #cecece;
   transition: 250ms all;
   padding: 20px;
   margin-bottom: 60px;
@@ -11,7 +11,7 @@
 
 .wine:hover {
   transform: scale(1.02);
-  opacity: .9;
+  opacity: 0.9;
 }
 
 .wine-image {
@@ -30,12 +30,12 @@
 
 @media (max-width: 500px) {
   .wine {
-      width: 100%;
-      margin-bottom: 20px;
+    width: 100%;
+    margin-bottom: 20px;
   }
   .wine-image {
-      width: 180px;
-      margin: 15px;
-      padding: 10px;
+    width: 180px;
+    margin: 15px;
+    padding: 10px;
   }
 }
