--- a/client/src/assets/Footer.css
+++ b/client/src/assets/Footer.css
@@ -2,9 +2,14 @@ footer {
   display: flex;
   justify-content: center;
   width: 100%;
-  background-image: linear-gradient(180deg, #5e0e0e, #772323);
-  color: whitesmoke;
   font-weight: 600;
   margin-top: 60px;
   bottom: 0;
+  position: relative;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
 }
