--- a/client/src/assets/WineCard.css
+++ b/client/src/assets/WineCard.css
@@ -14,11 +14,6 @@
   opacity: .9;
 }
 
-
-.wine-card-image {
-  width: 300px;
-}
-
 .wine-card a {
   text-decoration: underline;
   letter-spacing: .7px;  display: flex;
@@ -30,9 +25,24 @@
   .wine-card {
       padding: 10px;
       padding-bottom: 25px;
-      margin: 10px;
       margin-top: 0px;
       padding-top: 0px;
+  }
+  .wine-card-image {
+      width: 180px;
+      padding: 10px;
+      margin: 4px;
+  }
+}
+
+
+@media (max-width: 375px) {
+  .wine-card {
+      padding: 10px;
+      padding-bottom: 25px;
+      margin-top: 0px;
+      padding-top: 0px;
+      background-color: aquamarine;
   }
   .wine-card-image {
       width: 180px;
