--- a/client/src/assets/WineCards.css
+++ b/client/src/assets/WineCards.css
@@ -2,11 +2,13 @@
   width: 90vw;
   padding: 50px;
   margin: 50px;
+
 }
 
 .cards {
   display: flex;
   overflow-x: scroll;
+
 }
 
 .latest {
@@ -14,15 +16,24 @@
   color: rgb(56, 55, 55);
   padding: 10px;
   margin-top: 40px;
+
 }
 
 @media (max-width: 500px) {
   .wine-cards {
-    width: 90vw;
+    width: 360px;
     padding: 20px;
     margin: 0px;
   }
   .cards {
     margin: 0 -20px;
+  }
+}
+
+@media (max-width: 375px) {
+  .wine-cards {
+    width: 360px;
+    padding: 20px;
+    margin: 0px;
   }
 }
