--- a/client/src/assets/WinesOfMine.css
+++ b/client/src/assets/WinesOfMine.css
@@ -36,7 +36,7 @@ padding-top:-20px;
 }
 
 
-@media (max-width: 375) {
+@media (max-width: 375px) {
   .user-wines-heading{
     display: flex;
     justify-content: center;
