--- a/client/src/assets/Step1.css
+++ b/client/src/assets/Step1.css
@@ -23,3 +23,10 @@
 .select-create-color {
   margin-bottom: 40px;
 }
+
+.form-group-1 {
+  border: 2px gray solid;
+  box-shadow: 10px 5px 5px black;
+  padding: 20px;
+  margin-top: 20px;
+}
