--- a/client/src/assets/Step3.css
+++ b/client/src/assets/Step3.css
@@ -79,6 +79,13 @@
   color: whitesmoke;
 }
 
+.form-group-3 {
+  border: 2px gray solid;
+  box-shadow: 10px 5px 5px black;
+  padding: 20px;
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 375px) {
   .create-image-address {
     width: 340px;
